--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,5 @@
 	"version" : "1.3.1",
 	"type" : "typo3-cms-extension",
 	"keywords" : ["TYPO3 CMS"],
-	"license" : "proprietary",
+	"license" : "proprietary"
 }
