--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,35 @@
 {
-	"name" : "typo3-ter/webkitpdf",
-	"description" : "",
-	"version" : "1.3.6",
-	"type" : "typo3-cms-extension",
-	"keywords" : ["TYPO3 CMS"],
-	"license" : "proprietary"
+    "name" : "dmk/webkitpdf",
+    "description" : "Extend TCEMAIN.clearCacheCmd width some userfull options like using of aliases, clearing whole branches, clearing pages on the ground of their content etc.",
+    "version" : "2.0.0",
+    "type" : "typo3-cms-extension",
+    "keywords" : ["TYPO3 CMS", "cache", "pdf", "webkit", "wkhtmltopdf"],
+    "homepage" : "http://www.dmk-ebusiness.de/",
+    "license" : "GPL-2.0+",
+    "authors" : [
+        {
+            "name" : "Hannes Bochmann",
+            "email" : "dev@dmk-ebusiness.de",
+            "role" : "Developer"
+        }
+    ],
+    "support": {
+        "email": "dev@dmk-ebusiness.de",
+        "source": "https://github.com/DMKEBUSINESSGMBH/webkitpdf",
+        "issues": "https://github.com/DMKEBUSINESSGMBH/webkitpdf/issues"
+    },
+    "replace": {
+        "webkitpdf": "self.version",
+        "typo3-ter/webkitpdf": "self.version",
+        "dmk/webkitpdf": "self.version"
+    },
+    "require" : {
+        "typo3/cms-core" : ">=8.7.0 <=8.7.99",
+        "typo3-ter/rn-base" : ">=1.4.5",
+        "php": ">=7.1.0"
+    },
+    "autoload": {
+        "psr-4": {"DMK\\Webkitpdf\\" : "Classes"}
+    }
 }
+
