--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "dmk/webkitpdf": "self.version"
     },
     "require" : {
-        "typo3/cms-core" : ">=8.7.0 <=8.7.99",
+        "typo3/cms" : ">=8.7.0 <=8.7.99",
         "typo3-ter/rn-base" : ">=1.4.5",
         "php": ">=7.1.0"
     },
