--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
     "name" : "dmk/webkitpdf",
     "description" : "Extend TCEMAIN.clearCacheCmd width some userfull options like using of aliases, clearing whole branches, clearing pages on the ground of their content etc.",
-    "version": "2.0.4",
     "type" : "typo3-cms-extension",
     "keywords" : ["TYPO3 CMS", "cache", "pdf", "webkit", "wkhtmltopdf"],
     "homepage" : "http://www.dmk-ebusiness.de/",
-    "license" : "GPL-2.0+",
+    "license" : "GPL-2.0-or-later",
     "authors" : [
         {
             "name" : "Hannes Bochmann",
